--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ html {
 	background-color: #0d121a;
 	background-image: url(../img/cork-board.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .icon-size {
