--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ html {
   background-size: cover;
 }
 
+.billboard {
+		height: 75em;
+	}
+
 .icon-size {
 	ifont-size: 100px;
 }
@@ -83,8 +87,9 @@ html {
 
  .btn-text-color {
  	color: #fff;
- 	font-family: Arial;
+ 	font-family: 'Josefin Sans', Arial sans-serif;
  	text-transform: uppercase;
+ 	font-weight: 400;
  }
 
  .icon-hammer {
@@ -107,30 +112,40 @@ html {
 
 .design-title h1 {
 	text-align: center;
-	font-family: sans-serif;
+	font-family: 'Josefin Sans', Arial sans-serif;
 	font-weight: 700;
 	font-size: 3.5em;
 	line-height: 1.3154;
 	text-transform: uppercase;
+	padding-bottom: .5em;
+	color: #15012b;
 }
 
 
 @media only screen and (min-width: 25em) {
+	.design-title h1  {
+		font-size: 4em;
+	}
 }
 
 @media only screen and (min-width: 38em) {
 	.dbg {
 		background-size: 120% 200%;
 	}
+
+	.design-title h1  {
+		font-size: 5.5em;
+		padding-bottom: .5em;
+	}
 }
 
 @media only screen and (min-width: 60em) {
 	.design-title h1 {
-		margin-bottom: 1.5em;
+		font-size: 5em;
 	}
 
 	.bg {
-		background-size: 120% 200%;
+		background-size: cover;
 	}
 
 	.btn-phone {
@@ -147,9 +162,21 @@ html {
 		height: 262px;
 		width: 262px;
  }
+
+ .billboard {
+		height: 40em;
+	}
 }
 
 @media only screen and (min-width: 90em) {
+
+	.bg {
+		background-size: cover;
+	}
+
+	.design-title h1 {
+		font-size: 5.5em;
+	}
 
 	.btn-phone {
 		height: 280px;
