style(css): change the bg colour
change the bg colour so when images do not work the colour is
appropriate

#closed

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html {
 
 
 .bg {
-	background-color: #0d121a;
+	background-color: #efb882;
 	background-image: url(../img/cork-board.jpg);
   background-repeat: no-repeat;
   background-size: cover;
